--- a/app/src/main/res/layout/activity_admin_menu.xml
+++ b/app/src/main/res/layout/activity_admin_menu.xml
@@ -85,9 +85,10 @@
         android:layout_height="166dp"
         android:layout_marginStart="73dp"
         android:layout_marginTop="27dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="10dp"
         android:onClick="click_private"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton_timetable"
+        app:layout_constraintBottom_toTopOf="@+id/textView_teachers"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageButton_timetable"
         app:layout_constraintTop_toBottomOf="@+id/textView_admin"
