--- a/app/src/main/res/layout/activity_client_contact_list_student.xml
+++ b/app/src/main/res/layout/activity_client_contact_list_student.xml
@@ -16,7 +16,7 @@
         android:id="@+id/recyclerview_client_student"
         android:layout_width="0dp"
         android:layout_height="433dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
@@ -109,5 +109,20 @@
         app:layout_constraintHorizontal_bias="0.474"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/checkBox_age" />
+
+    <Button
+        android:id="@+id/button_add_student"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="14dp"
+        android:onClick="client_click_add_student"
+        android:text="Add student"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.455"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerview_client_student" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
