--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginTop="0dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
-        app:srcCompat="@drawable/img" />
+        app:srcCompat="@drawable/learning" />
 
     <Button
         android:id="@+id/button_client_sign_in"
