--- a/app/src/main/res/layout/recycleritem_student.xml
+++ b/app/src/main/res/layout/recycleritem_student.xml
@@ -80,7 +80,7 @@
         android:id="@+id/textView_student_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="9dp"
         android:layout_marginBottom="12dp"
         android:text="identity card"
         android:textSize="10sp"
@@ -133,8 +133,8 @@
 
     <TextView
         android:id="@+id/textView14"
-        android:layout_width="37dp"
-        android:layout_height="15dp"
+        android:layout_width="26dp"
+        android:layout_height="11dp"
         android:layout_marginStart="16dp"
         android:layout_marginBottom="12dp"
         android:text="ID"
@@ -146,29 +146,27 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="77dp"
         android:layout_marginBottom="21dp"
         android:text="Phone"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView16"
-        app:layout_constraintStart_toEndOf="@+id/textView_student_name" />
+        app:layout_constraintStart_toStartOf="@+id/textView16" />
 
     <TextView
         android:id="@+id/textView16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="43dp"
         android:layout_marginBottom="25dp"
         android:text="Email"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView17"
-        app:layout_constraintStart_toEndOf="@+id/textView_student_last_name" />
+        app:layout_constraintStart_toStartOf="@+id/textView17" />
 
     <TextView
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
+        android:layout_marginStart="40dp"
         android:layout_marginBottom="11dp"
         android:text="Class"
         android:textSize="10sp"
