--- a/app/src/main/res/layout/recycleritem_teacher.xml
+++ b/app/src/main/res/layout/recycleritem_teacher.xml
@@ -89,29 +89,27 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
         android:layout_marginTop="16dp"
         android:text="Phone"
         android:textSize="10sp"
-        app:layout_constraintStart_toEndOf="@+id/textView_teacher_name"
+        app:layout_constraintStart_toStartOf="@+id/textView8"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
         android:layout_marginBottom="12dp"
         android:text="Email"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView9"
-        app:layout_constraintStart_toEndOf="@+id/textView_teacher_last_name" />
+        app:layout_constraintStart_toStartOf="@+id/textView9" />
 
     <TextView
         android:id="@+id/textView9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="47dp"
+        android:layout_marginStart="40dp"
         android:layout_marginBottom="12dp"
         android:text="profession"
         android:textSize="10sp"
@@ -133,14 +131,15 @@
         android:id="@+id/textView_teacher_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="10dp"
         android:text="Email"
         android:textSize="10sp"
         app:layout_constraintBottom_toTopOf="@+id/textView_teacher_profession"
         app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toBottomOf="@+id/textView_teacher_phone" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_teacher_phone"
+        app:layout_constraintVertical_bias="0.75" />
 
     <TextView
         android:id="@+id/textView_teacher_profession"
